--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/slider": "^4.5.3",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
     "expo-font": "~12.0.10",
@@ -20,7 +22,7 @@
     "ionicons": "^7.4.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "@expo/vector-icons": "^14.0.3"
+    "react-native-svg": "^15.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
