--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/slider": "^4.5.3",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/material-top-tabs": "^6.6.14",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
     "expo-font": "~12.0.10",
@@ -22,7 +26,12 @@
     "ionicons": "^7.4.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-svg": "^15.7.1"
+    "react-native-pager-view": "6.3.0",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.7.1",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
