--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ionicons": "^7.4.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-deck-swiper": "^2.0.17",
     "react-native-pager-view": "6.3.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
