--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/libre-baskerville": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/vector-icons": "^14.0.3",
@@ -20,6 +21,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
+    "expo-app-loading": "^2.1.1",
     "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.2",
