--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.74.5",
     "react-native-deck-swiper": "^2.0.17",
     "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
