--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.74.5",
     "react-native-deck-swiper": "^2.0.17",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-iap": "^12.15.4",
     "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
