--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "platemates",
   "version": "1.0.0",
+  "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -28,8 +29,6 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-deck-swiper": "^2.0.17",
-    "react-native-gesture-handler": "^2.20.0",
-    "react-native-iap": "^12.15.4",
     "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
