payment + event backend

--- a/ios/PlateMates.xcodeproj/xcshareddata/xcschemes/PlateMates.xcscheme
+++ b/ios/PlateMates.xcodeproj/xcshareddata/xcschemes/PlateMates.xcscheme
@@ -60,6 +60,9 @@
             ReferencedContainer = "container:PlateMates.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../platematesconfig.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
