--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
+    "D": "^1.0.0",
     "expo": "~51.0.28",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.2",
     "ionicons": "^7.4.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-deck-swiper": "^2.0.17",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-iap": "^12.15.4",
+    "react-native-indicators": "^0.17.0",
     "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
