--- a/ios/PlateMates/Info.plist
+++ b/ios/PlateMates/Info.plist
@@ -30,6 +30,14 @@
 				<string>com.maxwellfung.PlateMates</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.970420223223-2d21hdbk1o1ub36fls2l085jukbp7k45</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
