--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "~51.0.28",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~12.0.10",
+    "expo-haptics": "~13.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.2",
     "ionicons": "^7.4.0",
@@ -36,13 +37,13 @@
     "react-native-iap": "^12.15.4",
     "react-native-indicators": "^0.17.0",
     "react-native-pager-view": "6.3.0",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
     "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-haptics": "~13.0.1"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
