--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/slider": "^4.5.3",
+    "@react-native-firebase/app": "^21.0.0",
+    "@react-native-firebase/dynamic-links": "^21.0.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
@@ -25,6 +27,7 @@
     "expo-app-loading": "^2.1.1",
     "expo-font": "~12.0.10",
     "expo-haptics": "~13.0.1",
+    "expo-linking": "~6.3.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.2",
     "ionicons": "^7.4.0",
