Very Stable Passwordless

--- a/ios/PlateMates/Info.plist
+++ b/ios/PlateMates/Info.plist
@@ -78,7 +78,7 @@
 	<false/>
 	<key>FirebaseDynamicLinksCustomDomains</key>
 	<array>
-		<string>https://platemates.page.link</string>
+		<string>https://platemates-3ec37.web.app/</string>
 	</array>
 </dict>
 </plist>
