--- a/app.json
+++ b/app.json
@@ -13,7 +13,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.maxwellfung.PlateMates"
+      "bundleIdentifier": "com.maxwellfung.PlateMates",
+      "entitlements": {
+        "aps-environment": "production"
+      }
     },
     "android": {
       "adaptiveIcon": {
