--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/slider": "^4.5.3",
     "@react-native-firebase/app": "^21.0.0",
     "@react-native-firebase/dynamic-links": "^21.0.0",
+    "@react-native-firebase/messaging": "^21.0.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
