--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo-google-fonts/libre-baskerville": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.3",
     "@invertase/react-native-apple-authentication": "^2.4.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
@@ -30,11 +31,13 @@
     "expo-font": "~12.0.10",
     "expo-haptics": "~13.0.1",
     "expo-linking": "~6.3.1",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.2",
     "ionicons": "^7.4.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-deck-swiper": "^2.0.17",
     "react-native-dotenv": "^3.4.11",
@@ -46,9 +49,11 @@
     "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-size-matters": "^0.4.2",
     "react-native-svg": "^15.7.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.10",
     "react-native-webview": "^13.12.3"
   },
   "devDependencies": {
