--- a/ios/PlateMates/Info.plist
+++ b/ios/PlateMates/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.0</string>
+	<string>1.1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -40,7 +40,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.1</string>
 	<key>FirebaseDynamicLinksCustomDomains</key>
 	<array>
 		<string>https://platemates-3ec37.web.app/</string>
@@ -55,7 +55,7 @@
 		<true/>
 	</dict>
 	<key>UILaunchStoryboardName</key>
-	<string></string>
+	<string>Launch Screen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
