--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "D": "^1.0.0",
     "expo": "~51.0.28",
     "expo-app-loading": "^2.1.1",
+    "expo-application": "~5.9.1",
     "expo-font": "~12.0.10",
     "expo-haptics": "~13.0.1",
     "expo-linking": "~6.3.1",
